--- a/manually/package.json
+++ b/manually/package.json
@@ -17,8 +17,12 @@
     "typescript": "^5.8.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.13",
     "@types/node": "^22.13.10",
-    "@types/react": "^19.0.10"
+    "@types/react": "^19.0.10",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.13"
   },
   "description": ""
 }
